feat(other): not needed

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -119,6 +119,35 @@
           "output": "css/style-dist.css",
           "name": "style.css",
           "category": "CSS",
+          "autoCompile": true,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7586a86b": {
+          "id": "7586a86b",
+          "path": "img/sticker.png",
+          "output": "img/sticker.png",
+          "name": "sticker.png",
+          "category": "IMAGE",
+          "size": 5035,
+          "type": "png",
+          "initialSize": 5035,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5cf7e162": {
+          "id": "5cf7e162",
+          "path": "css/style-dist.css",
+          "output": "css/style-dist-dist.css",
+          "name": "style-dist.css",
+          "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
           "compress": true,
@@ -148,7 +177,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": false
         },
         "deployment": {
           "ftpHost": "",
